Replace Collectors.toList() with Stream.toList()
See gh-1747

Signed-off-by: Eunseo Song <162149585+eunseo9311@users.noreply.github.com>